--- a/inc/main.css
+++ b/inc/main.css
@@ -2170,7 +2170,7 @@ A.logo-link:active IMG {
   color: #FFFFFF;
 }
 
-#tickets > DIV { width: 50%; margin: 0 auto; }
+#tickets > DIV { width: 50%; margin: 0 auto; min-width: 450px; }
 
 #tickets INPUT[type="text"] {
   border: 0;
@@ -2193,6 +2193,7 @@ A.logo-link:active IMG {
 
 #tickets INPUT[type="text"]#donation_name {
   width: 70%;
+  min-width: 330px;
 }
 
 #tickets INPUT::-webkit-input-placeholder { color: #0E8DC8; opacity: 1; }
@@ -3988,7 +3989,7 @@ A.featured-read:active {
     font-size: 2.8vw;
   }
 
-  #tickets { width: 65%; }
+  /*#tickets { width: 65%; }*/
 }
 
 @media only screen and (max-width: 1000px) {
@@ -4137,7 +4138,7 @@ A.featured-read:active {
     padding-top: 2em;
   }
 
-  #tickets { width: 90%; }
+  /*#tickets { width: 90%; }*/
 
   #btb-video-banner .site-width { flex-direction: column; }
   #btb-video-banner .text, #btb-video { width: 100%; }
@@ -5154,6 +5155,8 @@ A.featured-read:active {
 
 @media only screen and (max-width: 450px) {
   #newsletter-banner .site-width .text H3 { font-size: 13.556vw; }
+
+  #tickets > DIV { width: 96%; min-width: 0; }
 }
 
 @media only screen and (max-width: 320px) {
