--- a/inc/main.css
+++ b/inc/main.css
@@ -362,6 +362,7 @@ A.my-menu-toggle {
 
 .home-banner .home-banner-slide .site-width {
   position: relative;
+  z-index: 2;
   top: 50%;
   transform: translateY(-50%);
   color: #FFFFFF;
@@ -557,6 +558,40 @@ A.my-menu-toggle {
   font-weight: 400;
   font-size: 60%;
   line-height: 1em;
+}
+
+#pagecurl {
+  position: absolute;
+  z-index: 3;
+  bottom: 0;
+  right: 0;
+  width: 307px;
+  height: 400px;
+  background: url(../images/page-curl.webp) no-repeat bottom right;
+  background-size: contain;
+}
+
+#pagecurl:after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: url(../images/page-curl-transparent.webp) no-repeat bottom right;
+  background-size: contain;
+}
+
+#pagecurl > DIV {
+  position: absolute;
+  top: 60%;
+  right: 2%;
+  width: 50%;
+  color: #24A6DC;
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 1.2em;
+  text-transform: uppercase;
+  text-align: center;
+  text-decoration: none;
 }
 
 .home-banner .home-banner-slide.dogear .site-width {
@@ -4551,6 +4586,10 @@ A.featured-read:active {
   #dogear { width: 300px; height: 350px; }
   #dogear > DIV { font-size: 16px; }
 
+  .home-banner .learnmore:before {
+    content: ''; display: block; height: 1em;
+  }
+
   #endowment-goal H3 { font-size: 6vw; }
   #endowment-goal H4 { font-size: 17vw; }
   .inner-therm SPAN { font-size: 4vw; }
@@ -5083,6 +5122,10 @@ A.featured-read:active {
     margin-top: 105px;
   }
 
+  .home-banner .home-banner-slide.dogear .site-width {
+    top: 40%;
+  }
+
   .home-banner .home-banner-slide .site-width H1 {
     font-size: 48px;
     margin: 0 0 1em;
@@ -5092,11 +5135,11 @@ A.featured-read:active {
     margin-right: 0;
   }
 
-  .home-banner A.learnmore:link,
+/*  .home-banner A.learnmore:link,
   .home-banner A.learnmore:visited {
     display: inline-block;
     margin-top: 1em;
-  }
+  }*/
 
   .home-banner .home-banner-slide.big-jig { height: 250px; }
   .home-banner .big-jig .site-width A { font-size: 15px; }
