--- a/inc/main.css
+++ b/inc/main.css
@@ -5811,7 +5811,7 @@ A.featured-read:active {
 
 /* Legacy Giving */
 .legacy-banner {
-  background: #112C37; color: #FFFFFF; text-transform: uppercase;
+  background: #6B4099;; color: #FFFFFF; text-transform: uppercase;
   padding: 5.625rem 0; position: relative;
   
   @media (max-width: 700px) { & { padding: 4rem 0 0; } }
